--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
+    "@types/react": "18.2.65",
     "@types/react-dom": "^18.0.0",
     "dayjs": "^1.11.10",
     "gh-pages": "^6.1.1",
